    the local metadata.

  * Attempting to run mount.s3ql with --allow-user but without having
    the necessary permissions no longer results in the file system
    being marked as needing fsck.

  * The S3 backend now deletes multiple storage objects using one
    request if possible, reducing latency, traffic and number of
    requests to S3.
  
2013-06-14, S3QL 2.1 (beta)

  * S3QL now uses SSL connections by default.

  * S3QL now verifies server certificates when using SSL connections.

  * There is a new --no-ssl option that now works for every backend.

  * The Amazon S3 and Swift backends are now working again (regression
    was introduced in 2.0-beta).

2013-05-12, S3QL 2.0 (beta)

  * S3QL now requires Python 3.3 or newer.

  * S3QL now requires the pycrypto third-party Python module.

  * S3QL now requires at least version 0.39 of the llfuse Python
    module.

  * Cycling of metadata backups when using the local backend now
    takes much less time.

  * S3QL no longer requires the unittest2, pycryptopp and lzma
    third-party Python modules.

  * It is no longer required that S3QL and Python APSW be linked to
    the same SQLite shared library.

  * mount.s3ql: fixed crash when using --metadata-upload-interval 0.

  * Instead of completely unmounting the file system (and leaving the
    mount point inaccessible) when backend data is missing or
    corrupted, S3QL now returns an error and switches to read-only
    operation.

2013-04-09, S3QL 1.14

  * Reduced CPU consumption when S3QL is idle.

  * S3QL now automatically retries requests when S3 reports an
    "internal error" (this functionaly got accidentally broken
    in S3QL 1.13).

  * Fixed a hang when using s3qlrm to delete a directory with
    a very large number of sub-directories.

2013-03-03, S3QL 1.13.2

  * Allow S3 bucket names starting with a number.

  * Return EOPNOTSUP error on ACL operations. The previous value of
    EINVAL works with FUSE, but confuses several applications.
